@@ -86,8 +86,6 @@ typedef struct GeanyDocumentPrivate
 	time_t			 mtime;
 	/* ID of the idle callback updating the tag list */
 	guint			 tag_list_update_source;
-	/* whether there is a tag list update we haven't had a chance to honor yet */
-	gboolean		 tag_list_update_needed;
 }
 GeanyDocumentPrivate;
 
